# ChangeLog for x11-drivers/xf86-input-keyboard
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-input-keyboard/ChangeLog,v 1.44 2007/09/09 07:52:57 dberkholz Exp $

*xf86-input-keyboard-1.2.2 (09 Sep 2007)

  09 Sep 2007; Donnie Berkholz <dberkholz@gentoo.org>;
  +xf86-input-keyboard-1.2.2.ebuild:
  Bump for 7.3.

  07 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  xf86-input-keyboard-1.1.1.ebuild:
  Stable on sparc wrt #175465

*xf86-input-keyboard-1.2.0-r1 (02 Aug 2007)
*xf86-input-keyboard-1.1.1-r1 (02 Aug 2007)

  02 Aug 2007; Donnie Berkholz <dberkholz@gentoo.org>;
  +files/dont-release-keys-on-newer-servers.patch,
  +files/fix-key-led-update.patch, +xf86-input-keyboard-1.1.1-r1.ebuild,
  +xf86-input-keyboard-1.2.0-r1.ebuild:
  (#63732) Revbump for keyboard LED fixes.

  03 Jul 2007; Lars Weiler <pylon@gentoo.org>
  xf86-input-keyboard-1.1.1.ebuild:
  Stable on ppc; bug #175465.

  02 Jul 2007; Raúl Porcel <armin76@gentoo.org>
  xf86-input-keyboard-1.1.1.ebuild:
  alpha stable wrt #175465

  24 Jun 2007; Piotr Jaroszyński <peper@gentoo.org>
  xf86-input-keyboard-1.2.0.ebuild:
  (QA) Don't use KEYWORDS="-*". bug #160519.

  01 Jun 2007; Joshua Kinard <kumba@gentoo.org>
  xf86-input-keyboard-1.1.1.ebuild:
  Stable on mips.

  20 May 2007; Jeroen Roovers <jer@gentoo.org>
  xf86-input-keyboard-1.1.1.ebuild:
  Stable for HPPA (bug #175465).

  05 May 2007; Daniel Gryniewicz <dang@gentoo.org>
  xf86-input-keyboard-1.1.1.ebuild:
  Marked stable on amd64 for bug #175465

  29 Apr 2007; Andrej Kacian <ticho@gentoo.org>
  xf86-input-keyboard-1.1.1.ebuild:
  Stable on x86, bug #175465.

  25 Apr 2007; Raúl Porcel <armin76@gentoo.org>
  xf86-input-keyboard-1.1.1.ebuild:
  Stable on ia64 wrt bug #175465

  25 Apr 2007; Markus Rothe <corsair@gentoo.org>
  xf86-input-keyboard-1.1.1.ebuild:
  Stable on ppc64; bug #175465

  24 Jan 2007; Donnie Berkholz <dberkholz@gentoo.org>;