@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-input-keyboard/Attic/xf86-input-keyboard-1.2.0.ebuild,v 1.2 2007/06/24 18:20:41 peper Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-input-keyboard/Attic/xf86-input-keyboard-1.2.0.ebuild,v 1.3 2007/09/09 07:54:22 dberkholz Exp $
 
 # Must be before x-modular eclass is inherited
 #SNAPSHOT="yes"
@@ -8,7 +8,7 @@
 inherit x-modular
 
 DESCRIPTION="Keyboard input driver"
-KEYWORDS=""
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~sh ~sparc ~x86 ~x86-fbsd"
 RDEPEND=">=x11-base/xorg-server-1.2.99"
 DEPEND="${RDEPEND}
 	x11-proto/inputproto
